# StereoVisionToolkit

./: CMakeLists.txt  README.md
include/core/: feature_matching.hpp  rectification.hpp  types.hpp
src/core/: feature_matching.cpp  rectification.cpp
tests/: test_feature_matching.cpp  test_rectification.cpp
